<resources>
    <string name="app_name">TopReddit</string>
    <string name="loading">Loading</string>
    <string name="no_network">No network</string>
    <string name="retry">Retry</string>
    <string name="refresh">Refresh</string>
    <string name="post_image">Post image</string>
    <string name="subreddit_path">r/</string>
    <string name="post_author">author</string>
    <string name="post_time_ago">1 day ago</string>
    <string name="comments">Comments:</string>
    <string name="comment_count_template">999</string>
    <string name="post_title_template">Some text for title…</string>
    <string name="save_image">Download and save image?</string>
    <string name="save_image_ok">Save</string>
    <string name="save_image_cancel">Cancel</string>
</resources>